--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -7,10 +7,19 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{{title}}</title>
     <link rel="stylesheet" href="/stylesheets/style.css" />
+
   </head>
 
   <body>
-
+<nav>
+    <ul>
+      <li><a href="/">Home</a></li>
+      <li><a href="/shows">Shows</a></li>
+      <li><a href="/shows/new">New show</a></li>
+      <li><a href="/auth/signup">Sign up</a></li>
+      <li><a href="/auth/login">Log in</a></li>
+    </ul>
+  </nav>
     {{{body}}}
 
     <script src="/js/script.js"></script>
