its not much but its honest work

--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -1,8 +1,8 @@
 <h2>Sign up for free!</h2>
 
 <form method="POST" action="/auth/signup">
-  <label>Choose a username:</label>
-  <input type="text" name="username" placeholder="John Doe" required="true" />
+  <label>Choose your username:</label>
+  <input type="username" name="username" placeholder="John Doe" required="true" />
   <label>Password</label>
   <input type="password" name="password" placeholder="*********" required="true"/>
   <button type="submit">Register</button>
